[수정] List.of가 java 8 버전에서는 사용 불가능해 Arrays.asList로 변경